# conclave

./: .gitignore  LICENSE  README.md  pyproject.toml
src/conclave/: __init__.py  bands.py  challenge.py  data.py  diagnostics.py  ensemble.py  ensemble_experiment.py  estimators.py  experiment.py  features.py  grid.py  metrics.py  pointest.py  recal.py  submission.py
src/conclave/catalogs/: catalogs_pzdc.yaml
tests/: test_bands.py  test_challenge.py  test_data.py  test_ensemble.py  test_estimators.py  test_experiment.py  test_features.py  test_metrics.py  test_recal.py  test_smoke.py  test_submission.py
